@@ -1,3 +1,8 @@
+2002-01-31  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* libs/queue.c:
+	dixed core dump
+
 2002-01-30  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/module_interface.c (AddToMessageQueue):
